种子模块完成开发