@@ -23,7 +23,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponse;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.RegExUtils;
 import org.apache.commons.lang3.reflect.FieldUtils;
@@ -94,8 +94,6 @@ import com.ruoyi.common.utils.reflect.ReflectUtils;
 public class ExcelUtil<T>
 {
     private static final Logger log = LoggerFactory.getLogger(ExcelUtil.class);
-
-    public static final String SEPARATOR = ",";
 
     public static final String FORMULA_REGEX_STR = "=|-|\\+|@";
 
@@ -197,11 +195,6 @@ public class ExcelUtil<T>
     public Class<T> clazz;
 
     /**
-     * 需要显示列属性
-     */
-    public String[] includeFields;
-
-    /**
      * 需要排除列属性
      */
     public String[] excludeFields;
@@ -212,19 +205,10 @@ public class ExcelUtil<T>
     }
 
     /**
-     * 仅在Excel中显示列属性
-     *
-     * @param fields 列属性名 示例[单个"name"/多个"id","name"]
-     */
-    public void showColumn(String... fields)
-    {
-        this.includeFields = fields;
-    }
-
-    /**
      * 隐藏Excel中列属性
      *
      * @param fields 列属性名 示例[单个"name"/多个"id","name"]
+     * @throws Exception
      */
     public void hideColumn(String... fields)
     {
@@ -254,6 +238,8 @@ public class ExcelUtil<T>
     {
         if (StringUtils.isNotEmpty(title))
         {
+            subMergedFirstRowNum++;
+            subMergedLastRowNum++;
             int titleLastCol = this.fields.size() - 1;
             if (isSubList())
             {
@@ -264,7 +250,7 @@ public class ExcelUtil<T>
             Cell titleCell = titleRow.createCell(0);
             titleCell.setCellStyle(styles.get("title"));
             titleCell.setCellValue(title);
-            sheet.addMergedRegion(new CellRangeAddress(titleRow.getRowNum(), titleRow.getRowNum(), 0, titleLastCol));
+            sheet.addMergedRegion(new CellRangeAddress(titleRow.getRowNum(), titleRow.getRowNum(), titleRow.getRowNum(), titleLastCol));
         }
     }
 
@@ -275,31 +261,23 @@ public class ExcelUtil<T>
     {
         if (isSubList())
         {
+            subMergedFirstRowNum++;
+            subMergedLastRowNum++;
             Row subRow = sheet.createRow(rownum);
-            int column = 0;
-            int subFieldSize = subFields != null ? subFields.size() : 0;
+            int excelNum = 0;
             for (Object[] objects : fields)
             {
-                Field field = (Field) objects[0];
                 Excel attr = (Excel) objects[1];
-                if (Collection.class.isAssignableFrom(field.getType()))
-                {
-                    Cell cell = subRow.createCell(column);
-                    cell.setCellValue(attr.name());
-                    cell.setCellStyle(styles.get(StringUtils.format("header_{}_{}", attr.headerColor(), attr.headerBackgroundColor())));
-                    if (subFieldSize > 1)
-                    {
-                        CellRangeAddress cellAddress = new CellRangeAddress(rownum, rownum, column, column + subFieldSize - 1);
-                        sheet.addMergedRegion(cellAddress);
-                    }
-                    column += subFieldSize;
-                }
-                else
-                {
-                    Cell cell = subRow.createCell(column++);
-                    cell.setCellValue(attr.name());
-                    cell.setCellStyle(styles.get(StringUtils.format("header_{}_{}", attr.headerColor(), attr.headerBackgroundColor())));
-                }
+                Cell headCell1 = subRow.createCell(excelNum);
+                headCell1.setCellValue(attr.name());
+                headCell1.setCellStyle(styles.get(StringUtils.format("header_{}_{}", attr.headerColor(), attr.headerBackgroundColor())));
+                excelNum++;
+            }
+            int headFirstRow = excelNum - 1;
+            int headLastRow = headFirstRow + subFields.size() - 1;
+            if (headLastRow > headFirstRow)
+            {
+                sheet.addMergedRegion(new CellRangeAddress(rownum, rownum, headFirstRow, headLastRow));
             }
             rownum++;
         }
@@ -313,22 +291,10 @@ public class ExcelUtil<T>
      */
     public List<T> importExcel(InputStream is)
     {
-        return importExcel(is, 0);
-    }
-
-    /**
-     * 对excel表单默认第一个索引名转换成list
-     * 
-     * @param is 输入流
-     * @param titleNum 标题占用行数
-     * @return 转换后集合
-     */
-    public List<T> importExcel(InputStream is, int titleNum)
-    {
         List<T> list = null;
         try
         {
-            list = importExcel(StringUtils.EMPTY, is, titleNum);
+            list = importExcel(is, 0);
         }
         catch (Exception e)
         {
@@ -340,6 +306,18 @@ public class ExcelUtil<T>
             IOUtils.closeQuietly(is);
         }
         return list;
+    }
+
+    /**
+     * 对excel表单默认第一个索引名转换成list
+     * 
+     * @param is 输入流
+     * @param titleNum 标题占用行数
+     * @return 转换后集合
+     */
+    public List<T> importExcel(InputStream is, int titleNum) throws Exception
+    {
+        return importExcel(StringUtils.EMPTY, is, titleNum);
     }
 
     /**
@@ -362,7 +340,7 @@ public class ExcelUtil<T>
             throw new IOException("文件sheet不存在");
         }
         boolean isXSSFWorkbook = !(wb instanceof HSSFWorkbook);
-        Map<String, List<PictureData>> pictures = null;
+        Map<String, PictureData> pictures;
         if (isXSSFWorkbook)
         {
             pictures = getSheetPictures07((XSSFSheet) sheet, (XSSFWorkbook) wb);
@@ -419,7 +397,7 @@ public class ExcelUtil<T>
                     Object val = this.getCellValue(row, entry.getKey());
 
                     // 如果不存在实例则新建.
-                    entity = (entity == null ? clazz.newInstance() : entity);
+                    entity = (entity == null ? clazz.getDeclaredConstructor().newInstance() : entity);
                     // 从map中得到对应列的field.
                     Field field = (Field) entry.getValue()[0];
                     Excel attr = (Excel) entry.getValue()[1];
@@ -428,7 +406,7 @@ public class ExcelUtil<T>
                     if (String.class == fieldType)
                     {
                         String s = Convert.toStr(val);
-                        if (s.matches("^\\d+\\.0$"))
+                        if (StringUtils.endsWith(s, ".0"))
                         {
                             val = StringUtils.substringBefore(s, ".0");
                         }
@@ -506,15 +484,16 @@ public class ExcelUtil<T>
                         }
                         else if (ColumnType.IMAGE == attr.cellType() && StringUtils.isNotEmpty(pictures))
                         {
-                            StringBuilder propertyString = new StringBuilder();
-                            List<PictureData> images = pictures.get(row.getRowNum() + "_" + entry.getKey());
-                            for (PictureData picture : images)
+                            PictureData image = pictures.get(row.getRowNum() + "_" + entry.getKey());
+                            if (image == null)
                             {
-                                byte[] data = picture.getData();
-                                String fileName = FileUtils.writeImportBytes(data);
-                                propertyString.append(fileName).append(SEPARATOR);
+                                val = "";
                             }
-                            val = StringUtils.stripEnd(propertyString.toString(), SEPARATOR);
+                            else
+                            {
+                                byte[] data = image.getData();
+                                val = FileUtils.writeImportBytes(data);
+                            }
                         }
                         ReflectUtils.invokeSetter(entity, propertyName, val);
                     }
@@ -732,91 +711,64 @@ public class ExcelUtil<T>
     {
         int startNo = index * sheetSize;
         int endNo = Math.min(startNo + sheetSize, list.size());
-        int currentRowNum = rownum + 1; // 从标题行后开始
-
+        int rowNo = (1 + rownum) - startNo;
         for (int i = startNo; i < endNo; i++)
         {
-            row = sheet.createRow(currentRowNum);
+            rowNo = isSubList() ? (i > 1 ? rowNo + 1 : rowNo + i) : i + 1 + rownum - startNo;
+            row = sheet.createRow(rowNo);
+            // 得到导出对象.
             T vo = (T) list.get(i);
+            Collection<?> subList = null;
+            if (isSubList())
+            {
+                if (isSubListValue(vo))
+                {
+                    subList = getListCellValue(vo);
+                    subMergedLastRowNum = subMergedLastRowNum + subList.size();
+                }
+                else
+                {
+                    subMergedFirstRowNum++;
+                    subMergedLastRowNum++;
+                }
+            }
             int column = 0;
-            int maxSubListSize = getCurrentMaxSubListSize(vo);
             for (Object[] os : fields)
             {
                 Field field = (Field) os[0];
                 Excel excel = (Excel) os[1];
-                if (Collection.class.isAssignableFrom(field.getType()))
+                if (Collection.class.isAssignableFrom(field.getType()) && StringUtils.isNotNull(subList))
                 {
-                    try
+                    boolean subFirst = false;
+                    for (Object obj : subList)
                     {
-                        Collection<?> subList = (Collection<?>) getTargetValue(vo, field, excel);
-                        if (subList != null && !subList.isEmpty())
+                        if (subFirst)
                         {
-                            int subIndex = 0;
-                            for (Object subVo : subList)
-                            {
-                                Row subRow = sheet.getRow(currentRowNum + subIndex);
-                                if (subRow == null)
-                                {
-                                    subRow = sheet.createRow(currentRowNum + subIndex);
-                                }
-
-                                int subColumn = column;
-                                for (Field subField : subFields)
-                                {
-                                    Excel subExcel = subField.getAnnotation(Excel.class);
-                                    addCell(subExcel, subRow, (T) subVo, subField, subColumn++);
-                                }
-                                subIndex++;
-                            }
-                            column += subFields.size();
+                            rowNo++;
+                            row = sheet.createRow(rowNo);
                         }
+                        List<Field> subFields = FieldUtils.getFieldsListWithAnnotation(obj.getClass(), Excel.class);
+                        int subIndex = 0;
+                        for (Field subField : subFields)
+                        {
+                            if (subField.isAnnotationPresent(Excel.class))
+                            {
+                                subField.setAccessible(true);
+                                Excel attr = subField.getAnnotation(Excel.class);
+                                this.addCell(attr, row, (T) obj, subField, column + subIndex);
+                            }
+                            subIndex++;
+                        }
+                        subFirst = true;
                     }
-                    catch (Exception e)
-                    {
-                        log.error("填充集合数据失败", e);
-                    }
+                    this.subMergedFirstRowNum = this.subMergedFirstRowNum + subList.size();
                 }
                 else
                 {
-                    // 创建单元格并设置值
-                    addCell(excel, row, vo, field, column);
-                    if (maxSubListSize > 1 && excel.needMerge())
-                    {
-                        sheet.addMergedRegion(new CellRangeAddress(currentRowNum, currentRowNum + maxSubListSize - 1, column, column));
-                    }
-                    column++;
-                }
-            }
-            currentRowNum += maxSubListSize;
-        }
-    }
-
-    /**
-     * 获取子列表最大数
-     */
-    private int getCurrentMaxSubListSize(T vo)
-    {
-        int maxSubListSize = 1;
-        for (Object[] os : fields)
-        {
-            Field field = (Field) os[0];
-            if (Collection.class.isAssignableFrom(field.getType()))
-            {
-                try
-                {
-                    Collection<?> subList = (Collection<?>) getTargetValue(vo, field, (Excel) os[1]);
-                    if (subList != null && !subList.isEmpty())
-                    {
-                        maxSubListSize = Math.max(maxSubListSize, subList.size());
-                    }
-                }
-                catch (Exception e)
-                {
-                    log.error("获取集合大小失败", e);
+                    this.addCell(excel, row, vo, field, column++);
                 }
             }
         }
-        return maxSubListSize;
     }
 
     /**
@@ -951,7 +903,7 @@ public class ExcelUtil<T>
      */
     public void annotationDataStyles(Map<String, CellStyle> styles, Field field, Excel excel)
     {
-        String key = StringUtils.format("data_{}_{}_{}_{}_{}", excel.align(), excel.color(), excel.backgroundColor(), excel.cellType(), excel.wrapText());
+        String key = StringUtils.format("data_{}_{}_{}_{}", excel.align(), excel.color(), excel.backgroundColor(), excel.cellType());
         if (!styles.containsKey(key))
         {
             CellStyle style = wb.createCellStyle();
@@ -967,7 +919,6 @@ public class ExcelUtil<T>
             style.setBottomBorderColor(IndexedColors.GREY_50_PERCENT.getIndex());
             style.setFillPattern(FillPatternType.SOLID_FOREGROUND);
             style.setFillForegroundColor(excel.backgroundColor().getIndex());
-            style.setWrapText(excel.wrapText());
             Font dataFont = wb.createFont();
             dataFont.setFontName("Arial");
             dataFont.setFontHeightInPoints((short) 10);
@@ -996,7 +947,7 @@ public class ExcelUtil<T>
         if (isSubList())
         {
             // 填充默认样式，防止合并单元格样式失效
-            sheet.setDefaultColumnStyle(column, styles.get(StringUtils.format("data_{}_{}_{}_{}_{}", attr.align(), attr.color(), attr.backgroundColor(), attr.cellType(), attr.wrapText())));
+            sheet.setDefaultColumnStyle(column, styles.get(StringUtils.format("data_{}_{}_{}_{}", attr.align(), attr.color(), attr.backgroundColor(), attr.cellType())));
             if (attr.needMerge())
             {
                 sheet.addMergedRegion(new CellRangeAddress(rownum - 1, rownum, column, column));
@@ -1038,15 +989,12 @@ public class ExcelUtil<T>
         else if (ColumnType.IMAGE == attr.cellType())
         {
             ClientAnchor anchor = new XSSFClientAnchor(0, 0, 0, 0, (short) cell.getColumnIndex(), cell.getRow().getRowNum(), (short) (cell.getColumnIndex() + 1), cell.getRow().getRowNum() + 1);
-            String propertyValue = Convert.toStr(value);
-            if (StringUtils.isNotEmpty(propertyValue))
+            String imagePath = Convert.toStr(value);
+            if (StringUtils.isNotEmpty(imagePath))
             {
-                List<String> imagePaths = StringUtils.str2List(propertyValue, SEPARATOR);
-                for (String imagePath : imagePaths)
-                {
-                    byte[] data = ImageUtils.getImage(imagePath);
-                    getDrawingPatriarch(cell.getSheet()).createPicture(anchor, cell.getSheet().getWorkbook().addPicture(data, getImageType(data)));
-                }
+                byte[] data = ImageUtils.getImage(imagePath);
+                getDrawingPatriarch(cell.getSheet()).createPicture(anchor,
+                        cell.getSheet().getWorkbook().addPicture(data, getImageType(data)));
             }
         }
     }
@@ -1137,12 +1085,10 @@ public class ExcelUtil<T>
                 cell = row.createCell(column);
                 if (isSubListValue(vo) && getListCellValue(vo).size() > 1 && attr.needMerge())
                 {
-                    if (subMergedLastRowNum >= subMergedFirstRowNum)
-                    {
-                        sheet.addMergedRegion(new CellRangeAddress(subMergedFirstRowNum, subMergedLastRowNum, column, column));
-                    }
+                    CellRangeAddress cellAddress = new CellRangeAddress(subMergedFirstRowNum, subMergedLastRowNum, column, column);
+                    sheet.addMergedRegion(cellAddress);
                 }
-                cell.setCellStyle(styles.get(StringUtils.format("data_{}_{}_{}_{}_{}", attr.align(), attr.color(), attr.backgroundColor(), attr.cellType(), attr.wrapText())));
+                cell.setCellStyle(styles.get(StringUtils.format("data_{}_{}_{}_{}", attr.align(), attr.color(), attr.backgroundColor(), attr.cellType())));
 
                 // 用于读取对象中的属性
                 Object value = getTargetValue(vo, field, attr);
@@ -1152,7 +1098,6 @@ public class ExcelUtil<T>
                 String dictType = attr.dictType();
                 if (StringUtils.isNotEmpty(dateFormat) && StringUtils.isNotNull(value))
                 {
-                    cell.getCellStyle().setDataFormat(this.wb.getCreationHelper().createDataFormat().getFormat(dateFormat));
                     cell.setCellValue(parseDateToStr(dateFormat, value));
                 }
                 else if (StringUtils.isNotEmpty(readConverterExp) && StringUtils.isNotNull(value))
@@ -1291,7 +1236,7 @@ public class ExcelUtil<T>
     public static String convertByExp(String propertyValue, String converterExp, String separator)
     {
         StringBuilder propertyString = new StringBuilder();
-        String[] convertSource = converterExp.split(SEPARATOR);
+        String[] convertSource = converterExp.split(",");
         for (String item : convertSource)
         {
             String[] itemArray = item.split("=");
@@ -1328,7 +1273,7 @@ public class ExcelUtil<T>
     public static String reverseByExp(String propertyValue, String converterExp, String separator)
     {
         StringBuilder propertyString = new StringBuilder();
-        String[] convertSource = converterExp.split(SEPARATOR);
+        String[] convertSource = converterExp.split(",");
         for (String item : convertSource)
         {
             String[] itemArray = item.split("=");
@@ -1391,7 +1336,7 @@ public class ExcelUtil<T>
     {
         try
         {
-            Object instance = excel.handler().newInstance();
+            Object instance = excel.handler().getDeclaredConstructor().newInstance();
             Method formatMethod = excel.handler().getMethod("format", new Class[] { Object.class, String[].class, Cell.class, Workbook.class });
             value = formatMethod.invoke(instance, value, excel.args(), cell, this.wb);
         }
@@ -1453,7 +1398,8 @@ public class ExcelUtil<T>
      */
     public String encodingFilename(String filename)
     {
-        return UUID.randomUUID() + "_" + filename + ".xlsx";
+        filename = UUID.randomUUID() + "_" + filename + ".xlsx";
+        return filename;
     }
 
     /**
@@ -1483,7 +1429,6 @@ public class ExcelUtil<T>
      */
     private Object getTargetValue(T vo, Field field, Excel excel) throws Exception
     {
-        field.setAccessible(true);
         Object o = field.get(vo);
         if (StringUtils.isNotEmpty(excel.targetAttr()))
         {
@@ -1543,83 +1488,46 @@ public class ExcelUtil<T>
         List<Field> tempFields = new ArrayList<>();
         tempFields.addAll(Arrays.asList(clazz.getSuperclass().getDeclaredFields()));
         tempFields.addAll(Arrays.asList(clazz.getDeclaredFields()));
-        if (StringUtils.isNotEmpty(includeFields))
+        for (Field field : tempFields)
         {
-            for (Field field : tempFields)
+            if (!ArrayUtils.contains(this.excludeFields, field.getName()))
             {
-                if (ArrayUtils.contains(this.includeFields, field.getName()) || field.isAnnotationPresent(Excels.class))
+                // 单注解
+                if (field.isAnnotationPresent(Excel.class))
                 {
-                    addField(fields, field);
+                    Excel attr = field.getAnnotation(Excel.class);
+                    if (attr != null && (attr.type() == Type.ALL || attr.type() == type))
+                    {
+                        field.setAccessible(true);
+                        fields.add(new Object[] { field, attr });
+                    }
+                    if (Collection.class.isAssignableFrom(field.getType()))
+                    {
+                        subMethod = getSubMethod(field.getName(), clazz);
+                        ParameterizedType pt = (ParameterizedType) field.getGenericType();
+                        Class<?> subClass = (Class<?>) pt.getActualTypeArguments()[0];
+                        this.subFields = FieldUtils.getFieldsListWithAnnotation(subClass, Excel.class);
+                    }
                 }
-            }
-        }
-        else if (StringUtils.isNotEmpty(excludeFields))
-        {
-            for (Field field : tempFields)
-            {
-                if (!ArrayUtils.contains(this.excludeFields, field.getName()))
+
+                // 多注解
+                if (field.isAnnotationPresent(Excels.class))
                 {
-                    addField(fields, field);
+                    Excels attrs = field.getAnnotation(Excels.class);
+                    Excel[] excels = attrs.value();
+                    for (Excel attr : excels)
+                    {
+                        if (!ArrayUtils.contains(this.excludeFields, field.getName() + "." + attr.targetAttr())
+                                && (attr != null && (attr.type() == Type.ALL || attr.type() == type)))
+                        {
+                            field.setAccessible(true);
+                            fields.add(new Object[] { field, attr });
+                        }
+                    }
                 }
-            }
-        }
-        else
-        {
-            for (Field field : tempFields)
-            {
-                addField(fields, field);
             }
         }
         return fields;
-    }
-
-    /**
-     * 添加字段信息
-     */
-    public void addField(List<Object[]> fields, Field field)
-    {
-        // 单注解
-        if (field.isAnnotationPresent(Excel.class))
-        {
-            Excel attr = field.getAnnotation(Excel.class);
-            if (attr != null && (attr.type() == Type.ALL || attr.type() == type))
-            {
-                fields.add(new Object[] { field, attr });
-            }
-            if (Collection.class.isAssignableFrom(field.getType()))
-            {
-                subMethod = getSubMethod(field.getName(), clazz);
-                ParameterizedType pt = (ParameterizedType) field.getGenericType();
-                Class<?> subClass = (Class<?>) pt.getActualTypeArguments()[0];
-                this.subFields = FieldUtils.getFieldsListWithAnnotation(subClass, Excel.class);
-            }
-        }
-
-        // 多注解
-        if (field.isAnnotationPresent(Excels.class))
-        {
-            Excels attrs = field.getAnnotation(Excels.class);
-            Excel[] excels = attrs.value();
-            for (Excel attr : excels)
-            {
-                if (StringUtils.isNotEmpty(includeFields))
-                {
-                    if (ArrayUtils.contains(this.includeFields, field.getName() + "." + attr.targetAttr())
-                            && (attr != null && (attr.type() == Type.ALL || attr.type() == type)))
-                    {
-                        fields.add(new Object[] { field, attr });
-                    }
-                }
-                else
-                {
-                    if (!ArrayUtils.contains(this.excludeFields, field.getName() + "." + attr.targetAttr())
-                            && (attr != null && (attr.type() == Type.ALL || attr.type() == type)))
-                    {
-                        fields.add(new Object[] { field, attr });
-                    }
-                }
-            }
-        }
     }
 
     /**
@@ -1754,24 +1662,30 @@ public class ExcelUtil<T>
      * @param workbook 工作簿对象
      * @return Map key:图片单元格索引（1_1）String，value:图片流PictureData
      */
-    public static Map<String, List<PictureData>> getSheetPictures03(HSSFSheet sheet, HSSFWorkbook workbook)
+    public static Map<String, PictureData> getSheetPictures03(HSSFSheet sheet, HSSFWorkbook workbook)
     {
-        Map<String, List<PictureData>> sheetIndexPicMap = new HashMap<>();
+        Map<String, PictureData> sheetIndexPicMap = new HashMap<String, PictureData>();
         List<HSSFPictureData> pictures = workbook.getAllPictures();
-        if (!pictures.isEmpty() && sheet.getDrawingPatriarch() != null)
+        if (!pictures.isEmpty())
         {
             for (HSSFShape shape : sheet.getDrawingPatriarch().getChildren())
             {
+                HSSFClientAnchor anchor = (HSSFClientAnchor) shape.getAnchor();
                 if (shape instanceof HSSFPicture)
                 {
                     HSSFPicture pic = (HSSFPicture) shape;
-                    HSSFClientAnchor anchor = (HSSFClientAnchor) pic.getAnchor();
+                    int pictureIndex = pic.getPictureIndex() - 1;
+                    HSSFPictureData picData = pictures.get(pictureIndex);
                     String picIndex = anchor.getRow1() + "_" + anchor.getCol1();
-                    sheetIndexPicMap.computeIfAbsent(picIndex, k -> new ArrayList<>()).add(pic.getPictureData());
+                    sheetIndexPicMap.put(picIndex, picData);
                 }
             }
+            return sheetIndexPicMap;
         }
-        return sheetIndexPicMap;
+        else
+        {
+            return sheetIndexPicMap;
+        }
     }
 
     /**
@@ -1781,15 +1695,16 @@ public class ExcelUtil<T>
      * @param workbook 工作簿对象
      * @return Map key:图片单元格索引（1_1）String，value:图片流PictureData
      */
-    public static Map<String, List<PictureData>> getSheetPictures07(XSSFSheet sheet, XSSFWorkbook workbook)
+    public static Map<String, PictureData> getSheetPictures07(XSSFSheet sheet, XSSFWorkbook workbook)
     {
-        Map<String, List<PictureData>> sheetIndexPicMap = new HashMap<>();
+        Map<String, PictureData> sheetIndexPicMap = new HashMap<String, PictureData>();
         for (POIXMLDocumentPart dr : sheet.getRelations())
         {
             if (dr instanceof XSSFDrawing)
             {
                 XSSFDrawing drawing = (XSSFDrawing) dr;
-                for (XSSFShape shape : drawing.getShapes())
+                List<XSSFShape> shapes = drawing.getShapes();
+                for (XSSFShape shape : shapes)
                 {
                     if (shape instanceof XSSFPicture)
                     {
@@ -1797,7 +1712,7 @@ public class ExcelUtil<T>
                         XSSFClientAnchor anchor = pic.getPreferredSize();
                         CTMarker ctMarker = anchor.getFrom();
                         String picIndex = ctMarker.getRow() + "_" + ctMarker.getCol();
-                        sheetIndexPicMap.computeIfAbsent(picIndex, k -> new ArrayList<>()).add(pic.getPictureData());
+                        sheetIndexPicMap.put(picIndex, pic.getPictureData());
                     }
                 }
             }
